# rolling-api

./: .gitignore  README.md  csv_contract.md  dotenv  pyproject.toml  requirements.txt
ai-policy/: ai-policy-architecture.md  ai-policy-documentation.md
analysis_engine/: contracts.py  exceptions.py  group_keys.py
analysis_engine/methods/: descriptive_hormone_analysis.py
analysis_engine/reports/: traditional_reports.py
analysis_engine/utils/: conclusion_mapper.py  grouping_engine.py  statistics_calculator.py
app/: ai_client.py  config.py  db.py  exceptions.py  verify.sql  verify_ingest_import_analyse.py
app/models/: ai.py  analyses.py  athletes.py  datasets.py
app/repositories/: ai.py  analyses.py  analysis_inputs.py  analysts.py  athletes.py  cycle_phases.py  datasets.py  hormone_measurements.py  performances.py  projects.py  symptoms.py
app/routes/: analyses.py  analysts.py  datasets.py  projects.py
app/services/: ai_input_builder.py  ai_reporting.py  analysis_runner.py  dataset_mapping.py  dataset_upload.py  upload_validation.py
app/services/ai/: input_builder.py  model_client.py  orchestrator.py  provider.py  (+2 more)
scripts/: clear-upload-batches  reset-dev-db  verify
sql/: 00-clear-dev-data.sql  00-clear.sql  01-init.sql  02-schemas.sql  03-roles.sql  04-schema-app-private.sql  05-schema-research.sql  06-schema-projects.sql  07-tables-analyses.sql  08-indexes.sql  09-agents.sql  10-rls.sql  11-populate-lookups.sql
src/: main.py
src/rolling/: main.py
tests/integration/: base.py  test_dataset_upload.py  test_project_sharing.py  test_projects.py
(+70 files in other folders)
